WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298117
[GTK][WPE] Fix build with JOURNALD_LOG disabled
https://bugs.webkit.org/show_bug.cgi?id=298117
Summary
[GTK][WPE] Fix build with JOURNALD_LOG disabled
Ian Grunert
Reported
2025-08-29 12:44:04 PDT
PeerConnectionBackend fails to compile due to captured `this` being unused when JOURNALD_LOG is disabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Ian Grunert
Comment 1
2025-08-29 12:46:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50081
EWS
Comment 2
2025-09-02 07:51:32 PDT
Committed
299427@main
(bcd6ba89a2fb): <
https://commits.webkit.org/299427@main
> Reviewed commits have been landed. Closing PR #50081 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-02 07:52:17 PDT
<
rdar://problem/159667844
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug