[GTK][WPE] Fix build with JOURNALD_LOG disabled https://bugs.webkit.org/show_bug.cgi?id=298117

Reviewed by Philippe Normand.

PeerConnectionBackend fails to compile due to captured `this` being unused
when JOURNALD_LOG is disabled.

Canonical link: https://commits.webkit.org/299427@main